--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -22,105 +22,105 @@ jobs:
               # Start Mission 
               bash copy.sh
 
-    club:
-        name: Club OneDrive to OneDrive Sync
-        runs-on: ubuntu-latest
-        steps:
-        - name: checkout
-          uses: actions/checkout@master
-        - name: Download and Install rclone
-          run: sudo curl https://rclone.org/install.sh | sudo bash
-        - name: Decrypt config
-          run: |
-              bash decrypt.sh
-          env:
-              GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE}}
-        - name: Copy
-          run: |
-              # Start Mission 
-              bash clubod.sh
-    cdni:
-        name: Games CDN
-        runs-on: ubuntu-latest
-        steps:
-        - name: checkout
-          uses: actions/checkout@master
-        - name: Download and Install rclone
-          run: sudo curl https://rclone.org/install.sh | sudo bash
-        - name: Decrypt config
-          run: |
-              bash decrypt.sh
-          env:
-              GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE}}
-        - name: Copy
-          run: |
-              # Start Mission 
-              bash gamecdn.sh
-    emby:
-        name: Emby Google Drive to Google Drive Sync
-        runs-on: ubuntu-latest
-        steps:
-        - name: checkout
-          uses: actions/checkout@master
-        - name: Download and Install rclone
-          run: sudo curl https://rclone.org/install.sh | sudo bash
-        - name: Decrypt config
-          run: |
-              bash decrypt.sh
-          env:
-              GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE}}
-        - name: Copy
-          run: |
-              # Start Mission 
-              bash gdcopy.sh
-    tjod:
-        name: OneDrive to Google Drive Sync
-        runs-on: ubuntu-latest
-        steps:
-        - name: checkout
-          uses: actions/checkout@master
-        - name: Download and Install rclone
-          run: sudo curl https://rclone.org/install.sh | sudo bash
-        - name: Decrypt config
-          run: |
-              bash decrypt.sh
-          env:
-              GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE}}
-        - name: Copy
-          run: |
-              # Start Mission 
-              bash tjcopy.sh
-    backup:
-        name: WholeBackup
-        runs-on: ubuntu-latest
-        steps:
-        - name: checkout
-          uses: actions/checkout@master
-        - name: Download and Install rclone
-          run: sudo curl https://rclone.org/install.sh | sudo bash
-        - name: Decrypt config
-          run: |
-              bash decrypt.sh
-          env:
-              GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE}}
-        - name: Backup
-          run: |
-              # Start Mission 
-              bash wholebackup.sh
-    edubcp:
-        name: Full Backup to EDU
-        runs-on: ubuntu-latest
-        steps:
-        - name: checkout
-          uses: actions/checkout@master
-        - name: Download and Install rclone
-          run: sudo curl https://rclone.org/install.sh | sudo bash
-        - name: Decrypt config
-          run: |
-              bash decrypt.sh
-          env:
-              GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE}}
-        - name: Backup
-          run: |
-              # Start Mission 
-              bash eduwhole.sh 
+#     club:
+#         name: Club OneDrive to OneDrive Sync
+#         runs-on: ubuntu-latest
+#         steps:
+#         - name: checkout
+#           uses: actions/checkout@master
+#         - name: Download and Install rclone
+#           run: sudo curl https://rclone.org/install.sh | sudo bash
+#         - name: Decrypt config
+#           run: |
+#               bash decrypt.sh
+#           env:
+#               GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE}}
+#         - name: Copy
+#           run: |
+#               # Start Mission 
+#               bash clubod.sh
+#     cdni:
+#         name: Games CDN
+#         runs-on: ubuntu-latest
+#         steps:
+#         - name: checkout
+#           uses: actions/checkout@master
+#         - name: Download and Install rclone
+#           run: sudo curl https://rclone.org/install.sh | sudo bash
+#         - name: Decrypt config
+#           run: |
+#               bash decrypt.sh
+#           env:
+#               GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE}}
+#         - name: Copy
+#           run: |
+#               # Start Mission 
+#               bash gamecdn.sh
+#     emby:
+#         name: Emby Google Drive to Google Drive Sync
+#         runs-on: ubuntu-latest
+#         steps:
+#         - name: checkout
+#           uses: actions/checkout@master
+#         - name: Download and Install rclone
+#           run: sudo curl https://rclone.org/install.sh | sudo bash
+#         - name: Decrypt config
+#           run: |
+#               bash decrypt.sh
+#           env:
+#               GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE}}
+#         - name: Copy
+#           run: |
+#               # Start Mission 
+#               bash gdcopy.sh
+#     tjod:
+#         name: OneDrive to Google Drive Sync
+#         runs-on: ubuntu-latest
+#         steps:
+#         - name: checkout
+#           uses: actions/checkout@master
+#         - name: Download and Install rclone
+#           run: sudo curl https://rclone.org/install.sh | sudo bash
+#         - name: Decrypt config
+#           run: |
+#               bash decrypt.sh
+#           env:
+#               GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE}}
+#         - name: Copy
+#           run: |
+#               # Start Mission 
+#               bash tjcopy.sh
+#     backup:
+#         name: WholeBackup
+#         runs-on: ubuntu-latest
+#         steps:
+#         - name: checkout
+#           uses: actions/checkout@master
+#         - name: Download and Install rclone
+#           run: sudo curl https://rclone.org/install.sh | sudo bash
+#         - name: Decrypt config
+#           run: |
+#               bash decrypt.sh
+#           env:
+#               GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE}}
+#         - name: Backup
+#           run: |
+#               # Start Mission 
+#               bash wholebackup.sh
+#     edubcp:
+#         name: Full Backup to EDU
+#         runs-on: ubuntu-latest
+#         steps:
+#         - name: checkout
+#           uses: actions/checkout@master
+#         - name: Download and Install rclone
+#           run: sudo curl https://rclone.org/install.sh | sudo bash
+#         - name: Decrypt config
+#           run: |
+#               bash decrypt.sh
+#           env:
+#               GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE}}
+#         - name: Backup
+#           run: |
+#               # Start Mission 
+#               bash eduwhole.sh 
